# Explainable-AI

./: .gitignore  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
configs/: train_tabular.yaml
configs/data/: heart_disease.yaml
configs/experiments/tabular/: heart-disease-tabular.yaml
configs/models/tabular_models/: heart_disease.yaml
src/: pipelines.py  utils.py
src/data/heartdisease/: feature_preprocessor.py  heart_disease.py
src/explainers/counterfactual_based_explainers/: counterfactual_explainer_base.py
src/explainers/counterfactual_based_explainers/BoundaryCounterfactual/: boundary_counterfactual.py
src/explainers/counterfactual_based_explainers/CERTIFAI/: certifai.py  certifai_utils.py
src/explainers/counterfactual_based_explainers/CLEAR/: clear.py  clear_utils.py  density_check.py  get_distribution.py  rslvq.py
src/explainers/counterfactual_based_explainers/Counterfactual RCGAN for Time Series/: CounterRCGAN.py
src/explainers/counterfactual_based_explainers/FACE/: FACE.ipynb  face.py  face_utis.py  graph_components.py  kernel.py  rslvq.py
src/explainers/counterfactual_based_explainers/MACE/: create_env.py  init.py  knn.py  mace.py  mace_utils.py  reinforce.py
src/explainers/counterfactual_based_explainers/preprocess/: data_augmentation.py  discretizer.py
src/explainers/helpers/: assertions.py  helpers.py
src/functions/: model.py  norms.py  perturb.py  wachter.py
src/models/: dataclass.py  tabularmodels.py
src/models/tabular_models/: fully_connected.py  tabular_model.py
src/tests/: explainer_test.py
(+2 files in other folders)
