[tool.poetry]
name = "explainable-ai"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.10.12"
numpy = "^2.1.1"
captum = "^0.7.0"
scipy = "^1.14.1"
pandas = "^2.2.2"
hydra-core = "^1.3.2"
scikit-learn = "^1.5.2"
lime = "^0.2.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
